Preinstall task changed in package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "scripts"      : {
         "start": "node red.js",
         "test": "./node_modules/.bin/grunt",
-        "preinstall" : "grunt build"
+        "install" : "grunt build"
     },
     "bin"          : {
         "node-red": "./red.js",
