package.json reverted to original one

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "main"         : "red/red.js",
     "scripts"      : {
         "start": "node red.js",
-        "test": "./node_modules/.bin/grunt",
-        "postinstall" : "grunt build"
+        "test": "./node_modules/.bin/grunt"
     },
     "bin"          : {
         "node-red": "./red.js",
