--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name"         : "node-red",
-    "version"      : "0.13.2",
+    "name"         : "beetoo-controller",
+    "version"      : "0.1.0",
     "description"  : "A visual tool for wiring the Internet of Things",
     "homepage"     : "http://nodered.org",
     "license"      : "Apache-2.0",
